--- a/packages/components/src/components/text-field/text-field.css
+++ b/packages/components/src/components/text-field/text-field.css
@@ -70,10 +70,7 @@ scale-text-field {
   --color-helper-text: var(
     --telekom-color-text-and-icon-functional-informational
   );
-  --color-helper-text-error: var(
-    --scl-color-form-error-message,
-    var(--color-meta-error)
-  );
+  --color-helper-text-error: var(--color-meta-error);
   --color-helper-text-success: var(
     --telekom-color-text-and-icon-functional-success
   );
@@ -214,35 +211,23 @@ scale-text-field {
   border: var(--border-warning);
 }
 
-.text-field--variant-danger:not(.text-field--disabled):not(
-    .text-field--readonly
-  )
+.text-field--variant-danger:not(.text-field--disabled):not(.text-field--readonly)
   .text-field__control:hover,
-.text-field--variant-danger:not(.text-field--disabled):not(
-    .text-field--readonly
-  )
+.text-field--variant-danger:not(.text-field--disabled):not(.text-field--readonly)
   .text-field__control:focus {
   border-color: var(--telekom-color-functional-danger-hovered);
 }
 
-.text-field--variant-success:not(.text-field--disabled):not(
-    .text-field--readonly
-  )
+.text-field--variant-success:not(.text-field--disabled):not(.text-field--readonly)
   .text-field__control:hover,
-.text-field--variant-success:not(.text-field--disabled):not(
-    .text-field--readonly
-  )
+.text-field--variant-success:not(.text-field--disabled):not(.text-field--readonly)
   .text-field__control:focus {
   border-color: var(--telekom-color-functional-success-hovered);
 }
 
-.text-field--variant-warning:not(.text-field--disabled):not(
-    .text-field--readonly
-  )
+.text-field--variant-warning:not(.text-field--disabled):not(.text-field--readonly)
   .text-field__control:hover,
-.text-field--variant-warning:not(.text-field--disabled):not(
-    .text-field--readonly
-  )
+.text-field--variant-warning:not(.text-field--disabled):not(.text-field--readonly)
   .text-field__control:focus {
   border-color: var(--telekom-color-functional-warning-hovered);
 }
